libs/k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: targabay
  labels:
    name: targabay
