libs/k8s/go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
  namespace: targabay
  labels:
    app: go-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
        - name: go-service-container
          image: go-service-image
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: targabay
spec:
  selector:
    app: go-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
