libs/k8s/go-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  labels:
    app: go-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
        - name: go-service
          image: go-service
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: go-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
      nodePort: 30001
